# organize

./: .env.dist  .gitignore  .pre-commit-config.yaml  docker-compose.yml  package.json  pyproject.toml  vite.config.js
backend/: manage.py
backend/api/: serializer.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/organize/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package.json
frontend/src/components/: Footer.js  Navbar.js
home/: urls.py  views.py
organize/: asgi.py  settings.py  urls.py  wsgi.py
static/src/: App.vue  main.js
static/src/components/: HelloWorld.vue
static/src/stores/: user.js
tasks/: forms.py  models.py  schema.py
tasks/migrations/: 0001_initial.py
templates/: base.html
users/migrations/: 0001_initial.py
